--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -42,13 +42,20 @@
     <header class="blog-header py-3">
         <div class="row flex-nowrap justify-content-between align-items-center">
             <div class="col-4 pt-1">
-                <a class="link-secondary" href="#">Subscribe</a>
+                <a class="btn btn-sm btn-outline-secondary" href="/" th:text="#{menu.home}">Home</a>
+                <a class="btn btn-sm btn-outline-secondary" href="/questions/hot" th:text="#{menu.hot}">Hot</a>
+                <a class="btn btn-sm btn-outline-secondary" href="/questions/unanswered" th:text="#{menu.unanswered}">Unanswered</a>
+                <a class="btn btn-sm btn-outline-secondary" href="/questions/add" th:text="#{menu.add}">Ask</a>
             </div>
             <div class="col-4 text-center">
                 <a class="blog-header-logo text-dark" href="#">Large</a>
             </div>
             <div class="col-4 d-flex justify-content-end align-items-center">
-                <a class="link-secondary" href="#" aria-label="Search">
+
+                <a class=" btn-sm" href="?lang=pl"><img src="/img/flag-pl.png" alt="PL"/></a>
+                <a class=" btn-sm" href="?lang=en"><img src="/img/flag-en.png" alt="EN"/></a>
+
+                <a class="link-secondary" href="/search" aria-label="Search">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"/><path d="M21 21l-5.2-5.2"/></svg>
                 </a>
                 <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
@@ -58,7 +65,7 @@
 
     <div class="nav-scroller py-1 mb-2">
         <nav class="nav d-flex justify-content-between">
-            <a th:each="category : ${categories}" th:text="${category.name}" class="p-2 link-secondary" href="#">Category</a>
+            <a th:each="category : ${categories}" th:text="${category.name}" class="p-2 link-secondary" th:href="@{'/categories/'+${category.id}}">Category</a>
         </nav>
     </div>
 </div>
